--- a/package.json
+++ b/package.json
@@ -3,8 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "devDependencies": {
+    "chai": "^1.9.1",
     "grunt": "^0.4.4",
     "grunt-contrib-connect": "^0.7.1",
-    "load-grunt-tasks": "^0.4.0"
+    "grunt-karma": "^0.8.2",
+    "karma": "^0.12.1",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^0.1.3",
+    "karma-phantomjs-launcher": "^0.1.2",
+    "karma-requirejs": "^0.2.1",
+    "load-grunt-tasks": "^0.4.0",
+    "mocha": "^1.18.2",
+    "requirejs": "^2.1.11",
+    "sinon": "^1.9.0"
   }
 }
